# ollama-cli

./: .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LICENSE  OLLAMA.md  QARIN.md  README.md  RELEASE_VALIDATION_REPORT.md  ROADMAP.md  SECURITY.md  SUMMARY.md  SUMMARY_OF_CHANGES.md  TODO.md  app.d.ts  app.d.ts.map  app.js  app.js.map  index.d.ts  index.js  index.js.map  install.sh  package-lock.json  package.json  pyproject.toml  run_tests.py  tsconfig.json
.claude/data/: quality_scores.json
.git.production.bak/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.github/: README.md  copilot-instructions.md  dependabot.yml
.github/agents/: Helix.agent.md  llamaforge.agent.md
.github/workflows/: auto-merge-dependabot.yml  autorelease.yml  build-test.yml  ci.yml  copilot-setup-steps.yml  pypi-publish.yml  release.yml
.ollama/: chain.json  mcp.json  settings.json
.ollama/bugs/: bug_20260214_141401.json  bug_20260214_141436.json  bug_20260214_141517.json
.ollama/hooks/: install_ollama.py  notification.py  permission_request.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  setup.py  skill_trigger.py  stop.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
.ollama/status_lines/: status_line_full_dashboard.py  status_utils.py  (+2 more)
.qarin/: settings.json
api/: __init__.py  config.py  errors.py  mcp_client.py  ollama_client.py  provider_router.py  rdma_client.py
cmd/: accelerate.py  config.py  create.py  interactive.py  list.py  ps.py  pull.py  rdma.py  rm.py  root.py  run.py  serve.py  status.py  stop.py  version.py
components/: BottomBar.js  ChatView.d.ts.map  ChatView.js  ChatView.js.map  CodePanel.d.ts.map  CodePanel.js  CodePanel.js.map  DiffViewer.d.ts.map  InputArea.d.ts.map  InputArea.js  ProgressTheme.js  ProgressTheme.js.map  TopBanner.js  WaveProgress.js
core/: agent.js  builtin-hooks.js  chain.js  config.js  context.d.ts.map  context.js  context.js.map  hooks.d.ts  hooks.js  intent.js  logger.js  memory.js  models.js  models.js.map  plugins.js  project.js  session.d.ts.map  session.js  session.js.map  subagents.d.ts  tokens.js.map  tools.js  tools.js.map
docs/: GITHUB_SETTINGS_SETUP.md  README.md  ROADMAP.md  SYSTEM_WORKFLOW.md  TODO.md  adding_providers.md  agent_model_assignment.md  api.md  api_reference.md  cli_reference.md  configuration.md  development.md  getting_started.md  hooks.md  huggingface.md  mcp.md  multi_provider.md  project_overview.md  rdma.md  releases.md  testing_coverage.md  v0.2.0-release-summary.md
hooks/: useAgent.js  useAgent.js.map  useSubagents.d.ts  useSubagents.d.ts.map  useSubagents.js.map  useTheme.d.ts  useTheme.js  useTheme.js.map
model/: __init__.py  session.py
ollama_cmd/: accelerate.py  config.py  cp.py  create.py  install.py  interactive.py  list.py  onboarding.py  planning.py  ps.py  pull.py  rdma.py  rm.py  root.py  run.py  serve.py  show.py  status.py  stop.py  version.py  work.py
permissions/: bypass.py
production/: .env.sample  .gitignore  CHANGELOG.md  README.md  SECURITY.md  TODO.md  install.sh  pyproject.toml
production/.github/workflows/: autorelease.yml  build-test.yml  pypi-publish.yml
production/.ollama/: settings.json
production/.ollama/hooks/: notification.py  post_tool_use.py  pre_tool_use.py
production/.ollama/status_lines/: status_line_provider_health.py  status_utils.py
production/api/: __init__.py  ollama_client.py
production/cmd/: __init__.py  accelerate.py  cp.py  install.py  rdma.py  show.py  status.py
production/docs/: README.md  adding_providers.md  api_reference.md  cli_reference.md  configuration.md  development.md  getting_started.md  hooks.md  multi_provider.md
production/model/: __init__.py  session.py
production/runner/: rdma_manager.py
production/skills/: __init__.py  manifest.md
production/skills/exo/: __init__.py
production/skills/mlx/: __init__.py
production/specs/: hugging-face-integration.md
production/tests/: conftest.py  test_basic.py  test_claude_code_integration.py  test_context_manager_subagents.py  test_install.py  test_ollama_cli_comprehensive.py
qarin_cmd/: __init__.py  accelerate.py  config.py  cp.py  create.py  install.py  interactive.py  list.py  onboarding.py  planning.py  ps.py  pull.py  rdma.py  rm.py  root.py  run.py  serve.py  show.py  status.py  stop.py  version.py  work.py
runner/: __init__.py  agent_comm.py  chain_controller.py  context_manager.py  intent_classifier.py  memory_layer.py  rdma_manager.py  team_completion.py  token_counter.py
server/: __init__.py  hook_runner.py
skills/: __init__.py  manifest.md  tools.py
src/: api_client.py  app.tsx  cli.py  index.tsx  provider_router.py  token_counter.py
src.production.bak/: interactive.py  session.py
tests/: README.md  chain.test.js  conftest.py  context.test.js  hooks.test.js  intent.test.js  memory.test.js  test_accelerate_install.py  test_agent_comm_memory.py  test_auto_compact.py  test_basic.py  test_build_and_integration.py  test_bypass_permissions.py  test_chain_controller.py  test_claude_code_integration.py  test_cli_integration.py  test_cli_parser.py  test_command_processor.py  test_commands_implemented.py  test_context_manager_subagents.py  test_error_hierarchy.py  test_gemini_codex_features.py  test_hook_runner.py  test_install.py  test_intent_classifier.py  test_intent_integration.py  test_interactive_module.py  test_mcp_client.py  test_model_session.py  test_multi_model_hooks.py  test_new_providers.py  test_ollama_cli_comprehensive.py  test_ollama_cmd_modules.py  test_onboarding.py  test_provider_fallback_and_layout.py  test_provider_router.py  test_qarin_cli_comprehensive.py  test_rdma.py  test_rdma_manager.py  test_readline_history.py  (+11 more)
themes/: base.d.ts  base.js.map  caravan.d.ts  caravan.d.ts.map  caravan.js.map  index.d.ts  index.d.ts.map  index.js  qahwa.d.ts  qahwa.d.ts.map  shisha.d.ts
tui/: __init__.py  app.py  command_processor.py
types/: agent.js  chain.js  message.d.ts.map  theme.d.ts  theme.d.ts.map
(+74 files in other folders)
