[project]
name = "cli-ollama"
version = "0.2.0"
description = "Full-featured AI coding assistant powered by Ollama with multi-provider support, 13 lifecycle hooks, MCP integration, and chain orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Mohammed Uthmaan Al Hāshimī"}]
keywords = ["ollama", "ai", "cli", "coding-assistant", "llm", "multi-provider", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.0.0",
    "textual>=7.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.6.0",
    "python-semantic-release>=9.0.0",
]
rdma = [
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
]
mlx = [
    "psutil>=5.9.0",
]
exo = [
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/muah1987/cli-ollama"
Repository = "https://github.com/muah1987/cli-ollama"
Issues = "https://github.com/muah1987/cli-ollama/issues"
Documentation = "https://github.com/muah1987/cli-ollama/tree/main/docs"

[project.scripts]
ollama-cli = "ollama_cmd.root:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ollama_cmd", "api", "model", "server", "runner", "skills", "tui"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Prevent adding repository root to sys.path to avoid cmd module collision
addopts = ["--import-mode=importlib"]

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_source = "commit"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
tag_commit = true
commit_parser = "angular"
commit_author_token = "${GH_TOKEN}"
commit_message = "chore(release): {version}\n\nAutomatically generated release notes."
build_command = "uv build"
upload_to_pypi = false
upload_to_release = true
remove_dist = false
assets = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
