[project]
name = "qarin-cli"
version = "0.2.0"
description = "Full-featured AI coding assistant powered by Ai Models with multi-provider support (Ollama, llama.cpp, vLLM, Claude, Gemini, Codex/OpenAI, Hugging Face), 13 lifecycle hooks, MCP integration, tensor parallelism, and chain orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Mohammed Uthmaan Al Hāshimī"}]
keywords = ["qarin", "ai", "cli", "coding-assistant", "llm", "multi-provider", "mcp", "llama-cpp", "vllm", "tensor-parallelism", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.0.0",
    "textual>=7.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.6.0",
    "python-semantic-release>=9.0.0",
]
rdma = [
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
]
mlx = [
    "psutil>=5.9.0",
]
exo = [
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/muah1987/qarin-cli"
Repository = "https://github.com/muah1987/qarin-cli"
Issues = "https://github.com/muah1987/qarin-cli/issues"
Documentation = "https://github.com/muah1987/qarin-cli/tree/main/docs"

[project.scripts]
qarin = "qarin_cmd.root:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qarin_cmd", "api", "model", "server", "runner", "skills", "tui"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Prevent adding repository root to sys.path to avoid cmd module collision
addopts = ["--import-mode=importlib"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = false
commit_parser = "conventional"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.commit_author]
env = "GH_TOKEN"
default = "github-actions <github-actions@github.com>"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
