[project]
name = "ollama-cli"
version = "0.1.0"
description = "Full-featured AI coding assistant powered by Ollama with multi-provider support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Mohammed Uthmaan Al Hashimi"}]
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
]

[project.scripts]
ollama = "cmd.root:main"
ollama-cli = "cmd.root:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmd", "api", "model", "server", "runner"]

[tool.ruff]
line-length = 120
target-version = "py311"
